[Fix] AI 코스 결과 검증 계약 강화