@@ -4,6 +4,8 @@ import com.fasterxml.jackson.annotation.JsonInclude;
 
 import java.time.LocalDate;
 import java.time.LocalTime;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 @JsonInclude(JsonInclude.Include.ALWAYS)
@@ -12,12 +14,16 @@ public record CourseAiResultDto(
         List<DayDto> days
 ) {
     public CourseAiResultDto {
-        days = days == null ? List.of() : List.copyOf(days);
+        days = days == null
+                ? null
+                : Collections.unmodifiableList(new ArrayList<>(days));
     }
 
     public record DayDto(LocalDate date, List<ItemDto> items) {
         public DayDto {
-            items = items == null ? List.of() : List.copyOf(items);
+            items = items == null
+                    ? null
+                    : Collections.unmodifiableList(new ArrayList<>(items));
         }
     }
 
